# guepard-shield

./: .gitignore  Cargo.toml  README.md  pyproject.toml  rsync-runpod.sh
guepard-shield-ebpf/: Cargo.toml
guepard-shield-ebpf/src/: main.rs
guepard-shield-model/: .gitignore  WALKTHROUGH.md  pyproject.toml
guepard-shield-model/docs/plans/: 2026-04-19-keras-to-flax-migration.md
guepard-shield-model/gp/: config.py  datamodule.py  dataset.py  metrics.py  model.py
guepard-shield-model/gp/data_loader/: lidds_2019.py  lidds_2021.py  lidds_2021_torch.py  recording.py  vocabulary.py
guepard-shield-model/gp/dfa/: evaluate.py  export.py  transitions.py
guepard-shield-model/gp/diagnostic/: dongtingstats.py
guepard-shield-model/gp/model/: transformer.py
guepard-shield-model/gp/rules/: decision_set.py  feature_extractor.py  mitre_mapper.py  rust_codegen.py
guepard-shield-model/notebooks/: diagnostic.py  pilot.py
guepard-shield-model/notebooks/diagnostic/: 1_integrity.py  2_distributions.py  3_syscall.py  config.py  config_donting.py  config_lidds.py  dongting.py  lidds_2019.py  lidds_2021.py  thread_graph.py
guepard-shield-model/notebooks/p1/: 1_convert.py  1_data_prep.py  2_train.py  3_distill_eval.py  config.py
guepard-shield-model/notebooks/p2/: 1_data_prep.py  2_train.py  3_temperature.py  4_checkpoint.py  config.py
guepard-shield-model/results/diagnostic/: README.md
guepard-shield-model/results/diagnostic/lidds_2019/: attack_only_syscalls.txt  attack_timing.csv  integrity.csv  oov_rate.csv  scenario_balance.csv  seq_lengths.csv  syscall_vocab.csv
guepard-shield-model/results/diagnostic/lidds_2021/: attack_timing.csv  integrity.csv  oov_rate.csv  scenario_balance.csv  seq_lengths.csv  syscall_vocab.csv
guepard-shield-model/results/eda_cross_dataset/: summary.txt  vocab_dongting_full.txt  vocab_dongting_normal.txt  vocab_lidds2019.txt  vocab_lidds2021_train.txt  vocab_overlap.csv
guepard-shield-model/results/eda_dongting/: 01_recording_counts.csv  02_seq_length_percentiles.csv  02_seq_lengths.csv  03_oov_syscalls.txt  03_vocab_freq_top30.csv  03_vocab_size.csv  04_kernel_version_counts.csv  05_source_counts.csv  summary.txt
guepard-shield-model/results/eda_lidds2019/: 01_recording_counts.csv  01_scenario_counts.csv  02_seq_length_percentiles.csv  02_seq_lengths.csv  03_vocab_freq_top20.csv  03_vocab_size.csv  04_thread_summary.csv  05_attack_timing.csv  summary.txt
guepard-shield-model/results/eda_lidds2021/: 01_recording_counts.csv  02_seq_length_percentiles.csv  02_seq_lengths.csv  03_oov_syscalls.txt  03_vocab_freq_top20.csv  03_vocab_size.csv  04_per_thread_lengths.csv  04_thread_summary.csv  05_attack_timing.csv  summary.txt
guepard-shield-model/results/p2/: teacher_bilstm.ckpt  vectorizer.joblib  vocab.json
guepard-shield-model/results/pilot/: README.md
guepard-shield-model/src/gp/: config.py  mitre.py
guepard-shield-model/src/guepard/: config.py
(+139 files in other folders)
