[project]
name = "guepard-shield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "polars>=1.37.1",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "jupytext>=1.19.1",
    "ty>=0.0.12",
]
