[package]
name = "guepard-shield-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
guepard-shield-common = { path = "../guepard-shield-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "guepard-shield"
path = "src/main.rs"
