[project]
name = "guepard"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.6",
    "grain>=0.2.16",
    "ipykernel>=7.1.0",
    "jax[cuda12]>=0.9.2",
    "keras>=3.13.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "optax>=0.2.8",
    "orbax>=0.1.9",
    "polars>=1.37.1",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "jupytext>=1.19.1",
    "ruff>=0.15.7",
    "ty>=0.0.12",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "guepard"
namespace = true
