[project]
name = "guepard-shield-model"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "flax>=0.12.6",
  "grain>=0.2.16",
  "imodels>=2.0.4",
  "ipykernel>=7.1.0",
  "ipywidgets>=8.1.8",
  "jax[cuda13]>=0.9.2",
  "llvmlite>=0.46.0",
  "matplotlib>=3.10.8",
  "numpy>=2.4.1",
  "optax>=0.2.8",
  "orbax-checkpoint>=0.11.33",
  "polars>=1.27.1",
  "rich>=14.0.0",
  "scikit-learn>=1.6.0",
  "seaborn>=0.13.2",
  "shap>=0.49.1",
  "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
  "jupytext>=1.19.1",
  "ruff>=0.15.7",
  "ty>=0.0.12",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "gp"
namespace = true
